[package]
name = "hashbrown"
version = "0.14.0"
authors = ["Amanieu d'Antras <amanieu@gmail.com>"]
description = "A Rust port of Google's SwissTable hash map"
license = "MIT OR Apache-2.0"
repository = "https://github.com/rust-lang/hashbrown"
readme = "README.md"
keywords = ["hash", "no_std", "hashmap", "swisstable"]
categories = ["data-structures", "no-std"]
exclude = [".github", "/ci/*"]
edition = "2021"

[dependencies]
# For the default hasher
ahash = { version = "0.8", default-features = false, optional = true }

# For external trait impls
rayon = { version = "1", optional = true }
serde = { version = "1", default-features = false, optional = true }
rkyv = { version = "0.7", optional = true, default-features = false, features = [
    "alloc",
] }

# When built as part of libstd
core = { version = "1", optional = true, package = "rustc-std-workspace-core" }
compiler_builtins = { version = "0.1", optional = true }
alloc = { version = "1", optional = true, package = "rustc-std-workspace-alloc" }

# Support for allocators that use allocator-api2
allocator-api2 = { version = "0.2", optional = true, default-features = false, features = [
    "alloc",
] }

# Equivalent trait which can be shared with other hash table implementations.
equivalent = { version = "1", optional = true, default-features = false }

[dev-dependencies]
lazy_static = "1"
rand = { path = "../rand", features = ["small_rng"] }
rayon = "1"
fnv = "1"
serde_test = "1"
doc-comment = "0.3"
bumpalo = { version = "3", features = ["allocator-api2"] }
rkyv = { version = "0.7", features = ["validation"] }

[features]
default = ["ahash", "inline-more", "allocator-api2"]

nightly = ["allocator-api2?/nightly", "bumpalo/allocator_api"]

rustc-internal-api = []
rustc-dep-of-std = [
    "nightly",
    "core",
    "compiler_builtins",
    "alloc",
    "rustc-internal-api",
]
raw = []

# Enables usage of `#[inline]` on far more functions than by default in this
# crate. This may lead to a performance increase but often comes at a compile
# time cost.
inline-more = []

[package.metadata.docs.rs]
features = ["nightly", "rayon", "serde", "raw"]
rustdoc-args = ["--generate-link-to-definition"]
